--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
+    "@tanstack/react-query": "^5.90.10",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide": "^0.554.0",
     "lucide-react": "^0.544.0",
+    "newsdataapi": "^1.0.3",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
